--- a/examples/Aviato/package.json
+++ b/examples/Aviato/package.json
@@ -8,8 +8,8 @@
     "android": "./node_modules/.bin/react-native run-android"
   },
   "dependencies": {
-    "react": "~15.3.1",
-    "react-native": "0.36.0-rc.1",
+    "react": "^16.0.0-alpha.6",
+    "react-native": "^0.43.4",
     "react-native-side-menu": "^0.20.0",
     "react-router-native": "file:../../"
   }
