--- a/package.json
+++ b/package.json
@@ -62,9 +62,9 @@
     "react-native": "0.36.0-rc.1"
   },
   "dependencies": {
-    "history": "3.2.1",
+    "history": "4.6.1",
     "invariant": "^2.2.1",
-    "react-router": "3.0.0-alpha.3",
+    "react-router": "^4.1.1",
     "warning": "^3.0.0"
   },
   "devDependencies": {
@@ -80,14 +80,14 @@
     "eslint-plugin-import": "^2.0.1",
     "eslint-plugin-jsx-a11y": "^2.2.1",
     "eslint-plugin-react": "^6.2.0",
-    "flow-bin": "^0.33.0",
+    "flow-bin": "^0.44.2",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
     "gulp-mocha": "^3.0.1",
-    "react": "~15.3.1",
-    "react-native": "0.36.0-rc.1",
-    "react-native-mock": "^0.2.5",
-    "react-router": "3.0.0-alpha.3",
+    "react": "~15.5.4",
+    "react-native": "0.43.4",
+    "react-native-mock": "^0.3.1",
+    "react-router": "4.1.1",
     "rimraf": "^2.5.2",
     "run-sequence": "^1.2.2"
   }
