--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "dependencies": {
     "history": "4.6.1",
     "invariant": "^2.2.1",
-    "react-router": "^4.1.1",
+    "react-router": "3.0.0-alpha.3",
     "warning": "^3.0.0"
   },
   "devDependencies": {
